added KeyValue and check model for graphics and keep track of the progress